--- a/package.json
+++ b/package.json
@@ -7,18 +7,28 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "autoprefixer": "^9.6.5",
+    "babel-core": "^6.26.3",
     "browserslist": "^4.7.1",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-minify": "^3.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
+    "gulp-terser": "^1.2.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^2.0.0"
   },
   "author": "Jafar Salami",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readable-stream": "^3.4.0"
+  }
 }
